--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CountDown</title>
      <link rel="stylesheet" href="style.css">
+     <link href="https://fonts.googleapis.com/css2?family=Baloo+Da+2:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
@@ -14,7 +15,6 @@
             <div class="countdown"></div>
             <button class="reset">Reset</button>
         </div>
-        <!-- <button class="Switch">português</button>-->
     </div>
 
     <script src="script.js"></script>
